<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="tab_menu_pizza">Пиццы</string>
    <string name="tab_menu_burger">Бургеры</string>
    <string name="tab_menu_salad">Салаты</string>
    <string name="tab_menu_meat">Шашлыки</string>
    <string name="tab_menu_sandwich">Лаваш/Сэндвич</string>
    <string name="tab_menu_soup">Суп</string>
    <string name="tab_menu_snacks">Закуски</string>
    <string name="tab_menu_drink">Напитки</string>
    <string name="tab_menu_bread">Хлеб</string>

    <string name="welcome_text">Добро пожаловать</string>
    <string name="hint_phone">Введите номер телефона</string>
    <string name="hint_password">Введите пароль</string>

    <string name="hint_reg_first_name">Фамилия</string>
    <string name="hint_reg_second_name">Имя</string>
    <string name="hint_reg_middle_name">Отчество</string>
    <string name="hint_reg_phone">Телефон</string>
    <string name="hint_reg_address">Адрес</string>
    <string name="hint_reg_password">Пароль</string>
    <string name="button_reg">Регистрация</string>

    <string name="warning_title">Предупреждение</string>
    <string name="error_request_title">Произошла ошибка</string>
    <string name="error_request_message">Ведутся технические работы</string>
    <string name="error_request_message_about">Заведение закрыто\nЗаказы не принимаются</string>

    <string name="screen_orders_title">Мои заказы</string>

    <string name="screen_basket_bonus_switch">Потратить бонусы</string>

    <string name="title_bonus">%1$s бонусов</string>

    <string name="accessibility_no_orders">У Вас нет заказов</string>

    <string name="dialog_warning_title">Предупреждение</string>
    <string name="dialog_message_bascket_title">Не все поля заполнены</string>

    <string name="loader_order_create_message">Нужно немного подождать.\nМы оформляем Ваш заказ.</string>

    <string name="input_phone_mask">+998_________</string>
    <string name="input_phone_pattern_check">^[+]998[0-9]*$</string>
</resources>